new API added to get tags for project and validations added while saving labels for app
